Add map table of algorithms